<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.wingflare</groupId>
    <artifactId>cloud</artifactId>
    <version>${revision}</version>

    <name>wingflare-cloud</name>
    <description>翼闪云框架</description>
    <url>https://github.com/wingflare-cloud/framework</url>
    <organization>
        <name>WingFlare</name>
        <url>https://www.wingflare.com</url>
    </organization>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <distributionManagement>
        <site>
            <id>wingflare-docs</id>
            <url>https:/docs.wingflare.com/</url>
        </site>
        <downloadUrl>https://github.com/wingflare-cloud/framework</downloadUrl>
    </distributionManagement>

    <developers>
        <developer>
            <id>naizui</id>
            <name>NaiZui</name>
            <email>chenxi2511@qq.com</email>
            <organization>WingFlare</organization>
            <organizationUrl>https://www.wingflare.com</organizationUrl>
            <roles>
                <role>Project lead</role>
            </roles>
        </developer>

    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>21</java.version>
        <revision>1.0.0</revision>
        <hutool.version>5.8.39</hutool.version>
        <spring-cloud.version>2023.0.1</spring-cloud.version>
        <spring-boot.version>3.3.9</spring-boot.version>
        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
    </properties>

    <!-- 依赖声明 -->
    <dependencyManagement>
        <dependencies>
            <!-- SpringCloud 微服务 -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- SpringBoot 依赖配置 -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- hutool 依赖配置 -->
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-bom</artifactId>
                <version>${hutool.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${org.mapstruct.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <modules>
        <module>wingflare-dep</module>
        <module>wingflare-lib</module>
        <module>wingflare-starter</module>
        <module>wingflare-adapter</module>
        <module>wingflare-facade</module>
        <module>wingflare-sdk</module>
        <module>wingflare-module</module>
        <module>wingflare-develop-tool</module>
        <module>wingflare-gateway</module>
        <module>wingflare-engine</module>
        <module>wingflare-business</module>
        <module>wingflare-abstraction</module>
    </modules>
    <packaging>pom</packaging>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${org.mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>